--- a/src/app/userSetting/goal/goal-details-page/goal-details-page.component.scss
+++ b/src/app/userSetting/goal/goal-details-page/goal-details-page.component.scss
@@ -5,6 +5,9 @@
 
 .goal-form {
     margin: 10px;
+    div{
+        box-sizing: border-box;
+    }
     form{
         margin: 10px;
         display: flex;
