--- a/src/app/userSetting/user/user-details/user-details.component.scss
+++ b/src/app/userSetting/user/user-details/user-details.component.scss
@@ -16,6 +16,12 @@
         box-sizing: border-box;
     }
     .mat-slide{
-        padding-right: 20px;
+        height: 36px;
+    }
+}
+
+@media screen and(max-width: 500px){
+    .toogle-label{
+        display: none;
     }
 }
