--- a/src/app/userSetting/goal/goal-center/goal-center.component.html
+++ b/src/app/userSetting/goal/goal-center/goal-center.component.html
@@ -6,7 +6,7 @@
 
 <div class="goal-center">
     <mat-card>
-        <p-button label="Добавить Новую" class="navigate-btn" icon="pi pi-add" iconPos="right"></p-button>
+        <!-- <p-button label="Добавить Новую" class="navigate-btn" icon="pi pi-add" iconPos="right"></p-button> -->
         <button mat-raised-button class="navigate-btn" (click)="goToGoalDetails('0')">Добавить Новую</button>
 
         <p-accordion [multiple]="true">
