Favicon, some UI fixes

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -7,7 +7,7 @@
                 SignIn
             </div>            
 
-            <span *ngIf="warningMessage" class="warn-span">{{'warningMessage' | translate}}</span>
+            <span *ngIf="warningMessage" class="warn-span">{{'Warnings.WrongEmailOrPassword' | translate}}</span>
 
             <mat-form-field>
                 <input required placeholder="{{'Email' | translate}}" matInput formControlName="username">
