--- a/src/app/userSetting/goal/goal-details-page/goal-details-page.component.html
+++ b/src/app/userSetting/goal/goal-details-page/goal-details-page.component.html
@@ -32,6 +32,7 @@
                     placeholder="Введите дату старта"
                     dateFormat="dd.mm.yy"
                     [minDate]="minDateValue"
+                    [maxDate]="curGoal.finishDate"
                     [locale]="ru"
                     [showIcon]="true"></p-calendar>
             </div>
@@ -46,7 +47,7 @@
                     [(ngModel)]="curGoal.finishDate"
                     placeholder="Введите дату завершения"                
                     dateFormat="dd.mm.yy"
-                    [minDate]="minDateValue"
+                    [minDate]="curGoal.createdDate"
                     [locale]="ru"
                     [showIcon]="true"></p-calendar>
             </div>
@@ -116,7 +117,8 @@
         <goal-card class="goal-card"             
             (removeConditionEvent)="removeCondition($event)"
             [editable]="true"
-            [goal]="curGoal"></goal-card> 
+            [goal]="curGoal">
+        </goal-card> 
 
         <!--  ========================= Footer ========================== -->
 
