--- a/src/content/variables.scss
+++ b/src/content/variables.scss
@@ -5,4 +5,6 @@ $textColor: #fff;
 $mainBackground: rgba(34,34,34,.712);
 $lightBackground: rgba(82, 82, 82, 0.712);
 $lighterBackground: rgba(63, 63, 63, 0.712);
+$disabledBackground: rgba(109, 109, 109, 0.712);
+$weakendBackgroun: rgba(114, 73, 73, 0.712);
 $dialogBackground: #fff999!important;
