--- a/src/app/userSetting/goal/goal-center/goal-center.component.scss
+++ b/src/app/userSetting/goal/goal-center/goal-center.component.scss
@@ -9,9 +9,9 @@
     justify-content: space-between;
 }
 
-.goal-center .mat-card{
+.goal-center mat-card{
     margin: 10px;
-    //padding: 10px;
+    width: 100%;
 }
 
 .goal-container{
@@ -21,4 +21,8 @@
 
 .goal-card{
     width: 100%;
+}
+
+.header-button-container{
+    text-align: center;
 }
